# src/controllers/auth.js
@@ -1,7 +1,7 @@
-import bcrypt from "bcrypt";
 import {Users, ResetTokens} from "../models/";
 import {generateJWT} from "../middlewares/jwt";
-import { v4 as uuidv4 } from "uuid";
+import { v4 as uuidv4, validate } from "uuid";
+import bcrypt from "bcrypt";
 import moment from "moment";
 
 export const signUp = async (req, res) => {
@@ -90,7 +90,8 @@ export const resetPassword = async (req, res) => {
             res.status(200).json(
                 {
                     message: "peticion exitosa",
-                    data
+                    data,
+                    userID: results.id
                 }
             )
         }else{
@@ -105,4 +106,67 @@ export const resetPassword = async (req, res) => {
         })
     }
     
+}
+
+export const updatePassword = async (req, res) => {
+
+    const {token, password} = req.body;
+    const  idUser = req.params.userID;
+    const  fechaActual = moment();
+    const hasPassword = bcrypt.hashSync(password, 10);
+
+    try {
+
+        if(validate(token)){
+
+            const results = await ResetTokens.findOne({where: {token: token}});
+            let estadoFecha =  moment(fechaActual).isBefore(results.expirationDate);
+
+            if(results.token){
+
+                if(estadoFecha && results.active){
+
+                    const data = await Users.update({password: hasPassword},{where:{id: idUser}})
+
+                    if(data){
+                        res.status(201).json({
+                            message: "Se actualizó la contraseña del usuario"
+                        });
+                        const resultUpdateToken = await ResetTokens.update({active: false}, {where:{token:token}});
+                        
+                        if(resultUpdateToken){
+                            console.log("Se cambió el token a inactivo");
+                        }else{
+                            console.log("No se cambio el token a inactivo");
+                        }
+                    }else{
+                        res.status(400).json({
+                            message: "No fue posible actualizar la contraseña"
+                        });
+                    }
+                }else{
+                    res.status(401).json({
+                        message: "la fecha del token esta vencida y/o el token ya fue usado"
+                    })
+                }
+
+            }else{
+                res.status(400).json({
+                    message: "El token ingresado no existe"
+                });
+            }
+
+        }else{
+            res.status(401).json({
+                message: "El token ingresado no es un token valido"
+            });
+        }
+       
+        
+    } catch (error) {
+        res.status(400).json({
+            message: "No se ha podido completar la actualización"
+        });
+    }
+
 }
